separar componentes y revisar código

--- a/src/app/components/menu/logout/logout.component.html
+++ b/src/app/components/menu/logout/logout.component.html
@@ -1,1 +1,3 @@
-<p>logout works!</p>
+<li class="nav-item"> <!-- Button trigger modal -->
+    <a class="nav-link text-white"><i class="fa-solid fa-user fa-xl" type="button" routerLink="/intro"></i></a>
+</li>
