--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,9 +1,6 @@
-<nav class="navbar navbar-expand rounded">
-    <app-logoap></app-logoap>
-    <div>    
-      <ul class="navbar-nav p-2"> 
-        <app-redes></app-redes>
-        <app-login></app-login>
-      </ul>
-    </div>
+<nav class="navbar navbar-expand rounded">  
+  <div class="container-fluid">  
+    <app-logoap></app-logoap>  
+    <app-redes></app-redes>   
+  </div>   
 </nav>
