--- a/src/app/components/sobremi/sobremi.component.html
+++ b/src/app/components/sobremi/sobremi.component.html
@@ -1,11 +1,11 @@
 <section id="sobreMi" class="sobreMi text-white mt-4">
     <div class="seccion container-fluid rounded shadow-sm mb-5 bg-body-transparent p-0">
-      <img src="assets/img/FondoPC.jpg" alt="banner" width="100%" height="auto" class="rounded-top banner">
+      <app-banner></app-banner>
        <!-- Button trigger modal -->
       <button type="button"  data-bs-toggle="modal" data-bs-target="#bannerModal" class="btn btn-close-white editBanner"><i class="fa-solid fa-pencil"></i></button> 
       <div class="row p-3">
       <div class="col-3">
-        <img src="assets/img/profile.jpg" class="rounded-circle profileImage w-50" alt="profileImage"> 
+        <app-profileimg></app-profileimg>
        <!-- Button trigger modal -->  
         <button type="button"  data-bs-toggle="modal" data-bs-target="#profileModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
         <br>
