--- a/src/app/components/menu/redes/redes.component.html
+++ b/src/app/components/menu/redes/redes.component.html
@@ -1,4 +1,6 @@
-<li class="nav-item">
+<div>    
+  <ul class="navbar-nav"> 
+  <li class="nav-item">
     <a class="nav-link text-white" href="https://www.instagram.com/hebercalebcuevas/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
   </li>
   <li class="nav-item">
@@ -12,5 +14,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link text-white" href="https://github.com/BelacdowN" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
-  </li>
+  </li>  
   <app-login></app-login>
+  </ul>
+</div>
