--- a/src/app/components/menu/logout/logout.component.html
+++ b/src/app/components/menu/logout/logout.component.html
@@ -1,3 +1,3 @@
-<li class="nav-item"> <!-- Button trigger modal -->
-    <a class="nav-link text-white"><i class="fa-solid fa-user fa-xl" type="button" routerLink="/intro"></i></a>
+<li class="nav-item"> 
+    <a class="nav-link text-white"><i class="fa-solid fa-user fa-xl" type="button" (click)="onLogOut()"></i></a>    
 </li>
