--- a/src/app/components/menu/redes/redes.component.html
+++ b/src/app/components/menu/redes/redes.component.html
@@ -7,14 +7,15 @@
     <a class="nav-link text-white" href="https://es-la.facebook.com/hebercaleb.cuevas" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
   </li>
   <li class="nav-item">
-    <a class="nav-link text-white" href="https://twitter.com/HeberCuevas2" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
+    <a class="nav-link text-white" href="https://twitter.com/HeberCuevas91" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
   </li>
   <li class="nav-item">
     <a class="nav-link text-white" href="https://www.linkedin.com/in/heber-caleb-cuevas-1508bb224/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
   </li>
   <li class="nav-item">
     <a class="nav-link text-white" href="https://github.com/BelacdowN" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
-  </li>  
-  <app-login></app-login>
-  </ul>
+  </li>    
+  <app-login *ngIf="!isLogged"></app-login>
+  <app-logout *ngIf="isLogged"></app-logout>
+</ul>
 </div>
