--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -6,9 +6,9 @@
             </div>              
             <div class="d-flex col-auto mt-2">
           <!-- Button trigger modal --> 
-          <button type="button"  data-bs-toggle="modal" data-bs-target="#educacionModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
-         <button type="submit" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
+          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#educacionModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
       <div class="row">
