--- a/src/app/components/menu/login/modal-login/modal-login.component.html
+++ b/src/app/components/menu/login/modal-login/modal-login.component.html
@@ -2,8 +2,8 @@
          <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <div class="modal-header seccion rounded">
+                  <h5 class="modal-title text-white" id="exampleModalLabel">Login</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -20,7 +20,7 @@
                           <div id="passwordHelp" class="form-text">Ingrese su contraseña</div>
                         </div>
                         <div class="modal-footer">
-                          <button type="submit" class="btn btnLogin" data-bs-dismiss="modal">Iniciar Sesión</button>
+                          <button type="submit" class="btn btnLogin text-white" data-bs-dismiss="modal">Iniciar Sesión</button>
                         </div>
                       </form>
                   </div>
