--- a/src/app/components/modales/modales.component.html
+++ b/src/app/components/modales/modales.component.html
@@ -98,6 +98,10 @@
                         <input class="form-control" type="file" id="experienciaImg">
                       </div>
                       <div class="mb-3">
+                        <label for="experienciaUrl" class="form-label">Modificar URL de Empresa</label>
+                        <input type="url" class="form-control" id="experienciaUrl" placeholder="Nueva URL">
+                      </div>
+                      <div class="mb-3">
                         <label for="experienciaCargo" class="form-label">Modificar Cargo</label>
                         <input type="text" class="form-control" id="experienciaCargo" placeholder="Nombre nuevo">
                       </div>
@@ -112,6 +116,10 @@
                       <div class="mb-3">
                           <label for="experienciaInfo" class="form-label">Modificar Información de Cargo</label>
                           <textarea class="form-control" id="experienciaInfo" rows="3"></textarea>
+                      </div>
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Es trabajo actual</label>
                       </div>
                   </form>
               </div>
@@ -174,7 +182,7 @@
                   <form name="habilidadesForm"> 
                       <!-- formulario de habilidad-->
                       <div class="mb-3">
-                        <label for="habilidadNombre" class="form-label">Modificar Halilidad</label>
+                        <label for="habilidadNombre" class="form-label">Modificar Habilidad</label>
                         <input type="text" class="form-control" id="habilidadNombre" placeholder="Nombre nuevo">
                       </div>
                         <label for="habilidadPorcentaje" class="form-label">Modificar Porcentaje de Manejo (Escala 0-100)</label>
