--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand rounded">  
+<nav class="navbar navbar-expand rounded seccion" [ngClass]="{fondouser : isLogged}">  
   <div class="container-fluid">  
     <app-logoap></app-logoap>        
     <app-redes></app-redes>        
