--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,38 +1,50 @@
 <section id="experiencia" class="experiencia text-white">
-    <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent rounded">
+    <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent rounded"  [ngClass]="{fondouser : isLogged}">
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
       <h3>Experiencia</h3>
         </div>              
-        <div class="d-flex col-auto mt-2">                
-          <!-- Button trigger modal --> 
-          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+        <div class="d-flex col-auto mt-2">               
+          
          <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
       <div class="row">
         <div class="col-3">
-          <img src="assets/img/LogoTejamax.png" class="rounded-circle w-25" alt="logoShell"> <br>
+          <a href="https://www.grupotejamax.com/" target="_blank">
+          <img src="assets/img/LogoTejamax.png" class="rounded-circle w-25" alt="logoShell"> 
+          </a>
+        <br>
           <h5>Administración</h5>
           <h6>02-02-2013 02-01.2022</h6>
         </div>
         <div class="col-8">
           <h4>Auxiliar Administrativo en TEJAMAX SA orientado al sector mantenimiento, trabajos con normas ISO 9000 y 9001 en SGC, experiencia en cotizaciones de compra, atención a clientes y proveedores, controles de producción y stock, programación de mantenimientos preventivos, manejo de indicadores de mantenimiento y consumos, manejo de Office, manejo de dinero y rendiciones de caja, conducción de vehículos livianos.</h4>
         </div>
-        <div class="col-1"></div>
+        <div class="col-1 p-0">
+          <!-- Button trigger modal --> 
+          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+        </div>
       </div>
       <br><hr class="col-11">
       <div class="row">
         <div class="col-3">
-          <img src="assets/img/LogoRaful.png" class="rounded-circle w-25" alt="logoShell"> <br>
+          <a href="http://www.organizacionesraful.com/" target="_blank">
+            <img src="assets/img/LogoRaful.png" class="rounded-circle w-25" alt="logoShell"> 
+          </a>
+           <br>
           <h5>Administración</h5>
           <h6>05-10-2011 15-01-2013</h6>
         </div>
         <div class="col-8">
           <h4>Administrativo en PREMOLDEADOS RAFUL., con experiencia en cotizaciones de venta, atención a clientes, controles de producción y stock, manejo de Office.</h4>
         </div>
-         <div class="col-1"></div>
+         <div class="col-1 p-0">
+          <!-- Button trigger modal --> 
+          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+         </div>
       </div>
       <br><hr class="col-11">
       <div class="row">
@@ -44,7 +56,11 @@
         <div class="col-8">
           <h4>Vendedor de playa en ESTACIÓN DE SERVICIO SHELL Río Primero, con experiencia en manejo de dinero, rendición de caja, manejo de PC, atención a clientes.</h4>
         </div>
-        <div class="col-1"></div>
+        <div class="col-1 p-0">
+          <!-- Button trigger modal --> 
+          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+        </div>
       </div>
     </div>
   </section>  
