--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -1,67 +1,95 @@
 <section id="habilidades" class="habilidades text-white">
-    <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent rounded">
+    <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent rounded"  [ngClass]="{fondouser : isLogged}">
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
           <h3>Habilidades</h3>
-            </div>              
-            <div class="d-flex col-auto mt-2">
-          <!-- Button trigger modal --> 
-         <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#habilidadesModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
+        </div>              
+        <div class="d-flex col-auto mt-2">          
+          <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
+        
         <div class="row">
           <div class="col-3">
             <h4>HTML</h4>
-           </div>
-        <div class="col-8 mt-2">
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; min-width:10%">75%</div>
           </div>
+          <div class="col-7 mt-2">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated seccion"  [ngClass]="{fondouser : isLogged}" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; min-width:10%">75%
+              </div>
+            </div>
           </div>
+          <div class="col-2 p-0 d-flex item-alling-end">
+            <!-- Button trigger modal --> 
+            <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#habilidadesModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+            <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+          </div>
+        </div>
         
-      </div>
       <div class="row">
         <div class="col-3">
           <h4>CSS</h4>
         </div>
-      <div class="col-8 mt-2">
+      <div class="col-7 mt-2">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%; min-width:10%">60%</div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated seccion"  [ngClass]="{fondouser : isLogged}" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%; min-width:10%">60%
+          </div>
         </div>
       </div>
+      <div class="col-2 p-0 d-flex ">
+        <!-- Button trigger modal --> 
+        <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#habilidadesModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+        <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+      </div>
      </div>
+
      <div class="row">
       <div class="col-3">
         <h4>Java</h4>
       </div>
-    <div class="col-8 mt-2">
+    <div class="col-7 mt-2">
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%; min-width:10%">50%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated seccion"  [ngClass]="{fondouser : isLogged}" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%; min-width:10%">50%</div>
       </div>
     </div>
+    <div class="col-2 p-0 d-flex ">
+      <!-- Button trigger modal --> 
+      <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#habilidadesModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+      <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+    </div>
    </div>
+
    <div class="row">
     <div class="col-3">
       <h4>JavaScript</h4>
     </div>
-  <div class="col-8 mt-2">
+  <div class="col-7 mt-2">
     <div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 35%; min-width:10%">35%</div>
+      <div class="progress-bar progress-bar-striped progress-bar-animated seccion"  [ngClass]="{fondouser : isLogged}" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 35%; min-width:10%">35%</div>
     </div>
   </div>
+  <div class="col-2 p-0 d-flex">
+    <!-- Button trigger modal --> 
+    <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#habilidadesModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+    <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+  </div>
  </div>
+
  <div class="row">
   <div class="col-3">
     <h4>Boopstrap</h4>
   </div>
-<div class="col-8 mt-2">
+<div class="col-7 mt-2">
   <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%; min-width:10%;">90%</div>
+    <div class="progress-bar progress-bar-striped progress-bar-animated seccion"  [ngClass]="{fondouser : isLogged}" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%; min-width:10%;">90%</div>
   </div>
+</div>
+<div class="col-2 p-0 d-flex">
+  <!-- Button trigger modal --> 
+  <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#habilidadesModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+  <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
 </div>
 </div>
 
-    </div>
-  </section>  
+</div>
+</section>  
