--- a/src/app/components/menu/login/login.component.css
+++ b/src/app/components/menu/login/login.component.css
@@ -1,3 +1,15 @@
 .fa-user-slash:hover{
     color: rgb(247, 243, 48);
+    animation: shake 2s infinite;
+}
+
+.fa-user-slash{
+       animation: shake 2s infinite;
+}
+
+@keyframes shake {
+    10% {transform: scale(1.05) rotate(5deg);}
+    20% {transform: scale(1.05) rotate(-5deg);}
+    30% {transform: scale(1.05) rotate(5deg);}
+    40% {transform: none}
 }
