--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,13 +1,10 @@
 <section id="proyectos" class="proyectos text-white">
-    <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent">
+    <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent" [ngClass]="{fondouser : isLogged}">
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
           <h3>Proyectos</h3>
             </div>              
-            <div class="d-flex col-auto mt-2">
-          <!-- Button trigger modal --> 
-          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#proyectosModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+            <div class="d-flex col-auto mt-2">          
          <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
@@ -20,7 +17,10 @@
         <div class="col-8">
           <h4>Armado de login con campos y detalles sugeridos en trabajo práctico Argentina Programa</h4>
         </div>
-        <div class="col-1">                
+        <div class="col-1 p-0"> 
+<!-- Button trigger modal --> 
+<button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#proyectosModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
+<button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
         </div>
       </div>
     </div>
