--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -2,7 +2,9 @@
     <div class="seccion container-fluid rounded shadow-sm p-3 mb-5 bg-body-transparent rounded"  [ngClass]="{fondouser : isLogged}">
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
-      <h3>Experiencia</h3>
+      <h3>Experiencia
+        <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
+      </h3>
         </div>              
         <div class="d-flex col-auto mt-2">               
           
