--- a/src/app/components/menu/redes/redes.component.html
+++ b/src/app/components/menu/redes/redes.component.html
@@ -1,6 +1,6 @@
 <div>    
   <ul class="navbar-nav"> 
-  <li class="nav-item">
+  <!-- <li class="nav-item">
     <a class="nav-link text-white" href="https://www.instagram.com/hebercalebcuevas/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
   </li>
   <li class="nav-item">
@@ -8,7 +8,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link text-white" href="https://twitter.com/HeberCuevas91" target="_blank"><i class="fa-brands fa-twitter fa-xl"></i></a>
-  </li>
+  </li> -->
   <li class="nav-item">
     <a class="nav-link text-white" href="https://www.linkedin.com/in/heber-caleb-cuevas-1508bb224/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
   </li>
