--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,14 @@
 <section id="footer" class="footer">
-    <div class="seccion d-flex justify-content-end rounded shadow-sm p-3 bg-body-transparent"  [ngClass]="{fondouser : isLogged}">
+    <div class="seccion rounded shadow-sm p-3"  [ngClass]="{fondouser : isLogged}">
+  <div class="row">
+      <div class="col-9 text-white">
+      <h6 >© Copyright - Heber Caleb Cuevas - Proyecto Integrador</h6>
+    </div>
+  <div class="col-3 d-flex justify-content-end">
       <button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button>
       <a href="mailto:belacdown@gmail.com?Subject=Consulta%20oportunidad%20laboral%20vía%20Portfolio%20Web"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-envelope"></i></button></a>
       <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
     </div>
-  </section>  
+  </div>
+</div>
+</section>  
