--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,6 +1,21 @@
 <nav class="navbar navbar-expand rounded seccion" [ngClass]="{fondouser : isLogged}">  
   <div class="container-fluid">  
-    <app-logoap></app-logoap>        
-    <app-redes></app-redes>        
+    <!--logo argentina programa       -->
+    <a class="navbar-brand" href="https://argentinaprograma.inti.gob.ar/" target="_blank"> 
+      <img src="assets/img/APLogo.png" alt="logo-AP" width="120em" height="auto">
+    </a>
+    <!--redes y login   -->
+    <div>    
+      <ul class="navbar-nav"> 
+      <li class="nav-item">
+        <a class="nav-link text-white" href="https://www.linkedin.com/in/heber-caleb-cuevas-1508bb224/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="https://github.com/BelacdowN" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
+      </li>    
+      <app-login *ngIf="!isLogged"></app-login>
+      <app-logout *ngIf="isLogged"></app-logout>
+    </ul>
+    </div>
   </div>
 </nav>
