separacion de modales por componentes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,9 +5,14 @@
       <h6 >© Copyright - Heber Caleb Cuevas - Proyecto Integrador</h6>
     </div>
   <div class="col-3 d-flex justify-content-end">
-      <button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button>
+
+      <a href="download/../assets/cv/cvCuevas.pdf" download="CV - Cuevas Heber Caleb.pdf"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button></a>
+
       <a href="mailto:belacdown@gmail.com?Subject=Consulta%20oportunidad%20laboral%20vía%20Portfolio%20Web"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-envelope"></i></button></a>
+
       <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
+
+      
     </div>
   </div>
 </div>
