--- a/src/app/components/sobremi/sobremi.component.html
+++ b/src/app/components/sobremi/sobremi.component.html
@@ -1,16 +1,15 @@
 <section id="sobreMi" class="sobreMi text-white mt-4">  
-<!-- boton mostrar ocultar
-  <button type="button" class="btn btn-primary" (click)="mostrar=!mostrar">mostrar/ocultar</button> -->
+
   <div class="seccion container-fluid rounded shadow-sm mb-5 bg-body-transparent p-0" [ngClass]="{fondouser : isLogged}">
     <div class="position-absolute">        
       <a href="#experiencia"><button class="btn btn-dark">Experiencia</button></a>
       <a href="#educacion"><button class="btn btn-dark">Educacion</button></a>
       <a href="#habilidades"><button class="btn btn-dark">Habilidades</button></a>
       <a href="#proyectos"><button class="btn btn-dark">Proyectos</button></a>
-      <a href="#footer"><button class="btn btn-dark">Contacto</button></a>        
+      <a href="#footer"><button class="btn btn-dark">Contacto</button></a>     
     </div>
       
-      <img src="assets/img/FondoPC.jpg" alt="banner" width="100%" height="auto" class="rounded-top banner">
+      <img [src]="persona.banner" alt="banner" width="100%" height="auto" class="rounded-top banner">
        <!-- Button trigger modal -->
       <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#bannerModal" class="btn btn-close-white editBanner"><i class="fa-solid fa-pencil"></i></button> 
       <div class="row p-3">
@@ -33,3 +32,6 @@
     </div>
   </div>
           </section>
+<app-modal-banner></app-modal-banner>
+<app-modal-perfil></app-modal-perfil>
+<app-modal-sobremi></app-modal-sobremi>
