agregar modales de agregación

--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -3,7 +3,7 @@
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
       <h3>Experiencia
-        <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
+        <a href="#top"><button type="button" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#experienciaModalAdd" ><i class="fa-solid fa-arrow-turn-up"></i></button></a>
       </h3>
         </div>              
         <div class="d-flex col-auto mt-2">               
@@ -67,3 +67,4 @@
     </div>
   </section>  
 <app-modal-experiencia></app-modal-experiencia>
+<app-modal-experiencia-add></app-modal-experiencia-add>
