--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -3,7 +3,7 @@
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
           <h3>Educación
-            <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
+            <a href="#top"><button type="button" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#educacionModalAdd"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
           </h3>
             </div>              
             <div class="d-flex col-auto mt-2">
@@ -93,3 +93,4 @@
     </div>
   </section> 
   <app-modal-educacion></app-modal-educacion>
+  <app-modal-educacion-add></app-modal-educacion-add>
