--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
     </div>
   <div class="col-3 d-flex justify-content-end">
 
-      <a href="download/../assets/cv/cvCuevas.pdf" download="CV - Cuevas Heber Caleb.pdf"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button></a>
+      <a href="download/../assets/documents/cvCuevas.pdf" download="CV - Cuevas Heber Caleb.pdf"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button></a>
 
       <a href="mailto:belacdown@gmail.com?Subject=Consulta%20oportunidad%20laboral%20vía%20Portfolio%20Web"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-envelope"></i></button></a>
 
