--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -7,7 +7,7 @@
           </h3>
             </div>              
             <div class="d-flex col-auto mt-2">          
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-plus"></i></button>
+         <button type="submit" *ngIf="isLogged" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#proyectosModalAdd"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
       <div class="row">
@@ -28,3 +28,4 @@
     </div>
   </section>
   <app-modal-proyectos></app-modal-proyectos>
+  <app-modal-proyectos-add></app-modal-proyectos-add>
