corrección de errores en modales

--- a/src/app/modales/modal-educacion-add/modal-educacion-add.component.html
+++ b/src/app/modales/modal-educacion-add/modal-educacion-add.component.html
@@ -3,36 +3,36 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Editar Educación</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Agregar Educación</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <form name="educacionForm"> 
                 <!-- formulario de educación-->
                 <div class="mb-3">
-                  <label for="educacionImg" class="form-label">Modificar Logo de Instituto</label>
+                  <label for="educacionImg" class="form-label">Agregar Logo de Instituto</label>
                   <input class="form-control" type="file" id="educacionImg">
                 </div>
                 <div class="mb-3">
-                  <label for="educacionEstudio" class="form-label">Modificar Estudio</label>
+                  <label for="educacionEstudio" class="form-label">Agregar Estudio</label>
                   <input type="text" class="form-control" id="educacionEstudio" placeholder="Nombre nuevo">
                 </div>
                 <div class="mb-3">
-                  <label for="educacionPeriodoInicio" class="form-label">Modificar Periodo Inicio</label>
+                  <label for="educacionPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
                   <input type="date" class="form-control" id="educacionPeriodoInicio">
                 </div>
                 <div class="mb-3">
-                  <label for="educacionPeriodoFin" class="form-label">Modificar Periodo Fin</label>
+                  <label for="educacionPeriodoFin" class="form-label">Agregar Periodo Fin</label>
                   <input type="date" class="form-control" id="educacionPeriodoFin">
                 </div>
                 <div class="mb-3">
-                    <label for="educacionInfo" class="form-label">Modificar Información de Estudio Realizado</label>
+                    <label for="educacionInfo" class="form-label">Agregar Información de Estudio Realizado</label>
                     <textarea class="form-control" id="educacionInfo" rows="3"></textarea>
                 </div>
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Guardar</button>
+            <button type="button" class="btn btnLogin">Agregar</button>
         </div>
       </div>
     </div>
