--- a/src/app/modales/modal-proyectos-add/modal-proyectos-add.component.html
+++ b/src/app/modales/modal-proyectos-add/modal-proyectos-add.component.html
@@ -3,36 +3,36 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Editar Proyecto</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Agregar Proyecto</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <form name="proyectosForm"> 
                 <!-- formulario de proyectos-->
                 <div class="mb-3">
-                  <label for="proyectoImg" class="form-label">Modificar Logo de Proyecto</label>
+                  <label for="proyectoImg" class="form-label">Agregar Logo de Proyecto</label>
                   <input class="form-control" type="file" id="proyectoImg">
                 </div>
                 <div class="mb-3">
-                  <label for="proyectoNombre" class="form-label">Modificar Nombre de Proyecto</label>
+                  <label for="proyectoNombre" class="form-label">Agregar Nombre de Proyecto</label>
                   <input type="text" class="form-control" id="proyectoNombre" placeholder="Nombre nuevo">
                 </div>
                 <div class="mb-3">
-                  <label for="proyectoPeriodoInicio" class="form-label">Modificar Periodo Inicio</label>
+                  <label for="proyectoPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
                   <input type="date" class="form-control" id="proyectoPeriodoInicio">
                 </div>
                 <div class="mb-3">
-                  <label for="proyectoPeriodoFin" class="form-label">Modificar Periodo Fin</label>
+                  <label for="proyectoPeriodoFin" class="form-label">Agregar Periodo Fin</label>
                   <input type="date" class="form-control" id="proyectoPeriodoFin">
                 </div>
                 <div class="mb-3">
-                    <label for="proyectoInfo" class="form-label">Modificar Información de Proyecto Realizado</label>
+                    <label for="proyectoInfo" class="form-label">Agregar Información de Proyecto Realizado</label>
                     <textarea class="form-control" id="proyectoInfo" rows="3"></textarea>
                 </div>
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Guardar</button>
+            <button type="button" class="btn btnLogin">Agregar</button>
         </div>
       </div>
     </div>
