--- a/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
+++ b/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
@@ -3,34 +3,34 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Editar Experiencia</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Agregar Experiencia</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <form name="experienciaForm"> 
                 <!-- formulario de experiencia-->
                 <div class="mb-3">
-                  <label for="experienciaImg" class="form-label">Modificar Logo de Empresa</label>
+                  <label for="experienciaImg" class="form-label">Agregar Logo de Empresa</label>
                   <input class="form-control" type="file" id="experienciaImg">
                 </div>
                 <div class="mb-3">
-                  <label for="experienciaUrl" class="form-label">Modificar URL de Empresa</label>
+                  <label for="experienciaUrl" class="form-label">Agregar URL de Empresa</label>
                   <input type="url" class="form-control" id="experienciaUrl" placeholder="Nueva URL">
                 </div>
                 <div class="mb-3">
-                  <label for="experienciaCargo" class="form-label">Modificar Cargo</label>
+                  <label for="experienciaCargo" class="form-label">Agregar Cargo</label>
                   <input type="text" class="form-control" id="experienciaCargo" placeholder="Nombre nuevo">
                 </div>
                 <div class="mb-3">
-                  <label for="experienciaPeriodoInicio" class="form-label">Modificar Periodo Inicio</label>
+                  <label for="experienciaPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
                   <input type="date" class="form-control" id="experienciaPeriodoInicio">
                 </div>
                 <div class="mb-3">
-                  <label for="experienciaPeriodoFin" class="form-label">Modificar Periodo Fin</label>
+                  <label for="experienciaPeriodoFin" class="form-label">Agregar Periodo Fin</label>
                   <input type="date" class="form-control" id="experienciaPeriodoFin">
                 </div>
                 <div class="mb-3">
-                    <label for="experienciaInfo" class="form-label">Modificar Información de Cargo</label>
+                    <label for="experienciaInfo" class="form-label">Agregar Información de Cargo</label>
                     <textarea class="form-control" id="experienciaInfo" rows="3"></textarea>
                 </div>
                 <div class="form-check form-switch">
@@ -40,7 +40,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Guardar</button>          
+            <button type="button" class="btn btnLogin">Agregar</button>          
         </div>
       </div>
     </div>
